<resources>
    <string name="app_name">CrossFitLouvreBooking</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Monday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="thursday">Thursday:</string>
    <string name="friday">Friday:</string>
    <string name="saturday">Saturday:</string>
    <string name="sunday">Sunday:</string>
    <string name="add_button">+</string>

    <string-array name="wod_types_array">
        <item>Athletes (L)</item>
        <item>Athletes (S)</item>
        <item>Outside</item>
        <item>Technique</item>
        <item>Yoga</item>
    </string-array>
    <string-array name="ath_l_schedule_array">

    </string-array>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
